[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resouces/Particles/effect4.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Bullet.gd" type="Script" id=2]
[ext_resource path="res://Resouces/Particles/effect6.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 2.65314

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.470199 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 0 )

[node name="Bullet" type="RigidBody2D"]
collision_layer = 64
collision_mask = 136
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="Pixel_Particle_2" type="Sprite" parent="."]
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TimerLife" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="TimerDeath" type="Timer" parent="."]
one_shot = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 6
lifetime = 2.0
speed_scale = 0.0
explosiveness = 1.0
lifetime_randomness = 0.59
local_coords = false
texture = ExtResource( 3 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 341.44
radial_accel = 38.71
angle = 720.0
angle_random = 1.0
scale_amount = 0.1
color_ramp = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="TimerLife" to="." method="_on_TimerLife_timeout"]
[connection signal="timeout" from="TimerDeath" to="." method="_on_TimerDeath_timeout"]
